TestSuite/errors/err0302.pas
var y: real;

type
  A = class
    fX: record
          x: integer;
          end;
        end;
  end;
 
begin
end.